--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Test</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <style>
+    .box{
+        width: 100px;
+        height: 100px;
+        background: paleturquoise;
+        margin: 10px;
+    }
+
+    .container{
+        background: palegoldenrod;
+    }
+    </style>
 </head>
 <body>
-	<h1>Test project</h1>
+    <div class = 'container'>
+        <div class = 'box'></div>
+        <div class = 'box'></div>
+        <div class = 'box'></div>
+    </div>
 </body>
 </html>
