--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         background: paleturquoise;
         margin: 10px;
     }
+    .container{
+        background: palegoldenrod;
+		display: flex;	
+    }
 
     </style>
 </head>
