--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     }
     .container{
         background: palegoldenrod;
-	display: flex;	
+	display: flex;
+	flex-direction: row| row-reverse| column| column-reverse; 
     }
 
     </style>
