--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     .container{
         background: palegoldenrod;
 	display: flex;
-	flex-direction: row| row-reverse| column| column-reverse; 
+	flex-direction: column-reverse; 
     }
 
     </style>
