--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     .container{
         background: palegoldenrod;
 	display: flex;
-	flex-direction: column-reverse; 
+	flex-direction: column-reverse;
+	flex-wrap: wrap; 
     }
 
     </style>
