--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         background: palegoldenrod;
 	display: flex;
 	flex-direction: column-reverse;
-	flex-wrap: wrap; 
+	flex-wrap: nowrap; 
     }
 
     </style>
