--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         background: palegoldenrod;
 	display: flex;
 	flex-direction: column-reverse;
-	flex-wrap: nowrap; 
+	flex-wrap: nowrap;
+	justify-content: space-evenly; 
     }
 
     </style>
