--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     .container{
         background: palegoldenrod;
 	display: flex;
-	flex-direction: column-reverse;
-	flex-wrap: nowrap;
+	flex-direction: row-reverse;
+	flex-wrap: wrap;
 	justify-content: space-evenly; 
     }
 
