--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 	display: flex;
 	flex-direction: row-reverse;
 	flex-wrap: wrap;
-	justify-content: space-evenly; 
+	justify-content: space-evenly;
+	align-items: flex-end;
     }
 
     </style>
